# storage/api-docs/api-docs.json
@@ -184,6 +184,10 @@
                                             "type": "string",
                                             "example": "bearer"
                                         },
+                                        "user_id": {
+                                            "type": "integer",
+                                            "example": "1"
+                                        },
                                         "expires_in": {
                                             "type": "integer",
                                             "example": 3600
@@ -211,6 +215,55 @@
                         }
                     }
                 }
+            }
+        },
+        "/api/logout": {
+            "post": {
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "로그아웃",
+                "description": "현재 인증된 사용자의 JWT 토큰을 무효화합니다.",
+                "operationId": "fe8f3429cd6979b3b4517e186505f9f9",
+                "responses": {
+                    "200": {
+                        "description": "성공적으로 로그아웃 되었습니다.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "성공적으로 로그아웃 되었습니다."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "유효하지 않은 토큰입니다.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Unauthorized"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/regions/gallery/post/comments": {
